<resources>
    <string name="app_name">sport_tools</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_header_welcome">Üdvözöllek Sporttárs</string>
    <string name="event_activity_header">Eseményeim</string>
    <string name="event_name">Esemény neve: </string>
    <string name="event_audience">Melyik nem csatlakozhat: </string>
    <string name="event_start_date">Esemény kezdete: </string>
    <string name="event_end_date">Esemény vége: </string>
    <string name="event_price">Ár: </string>
    <string name="event_locale">Helyszín: </string>
    <string name="event_description">Leírás\n\n</string>
    <string name="profile_activity_header">Adataim</string>
    <string name="profile_name">Név: </string>
    <string name="profile_username">Felhasználónév: </string>
    <string name="profile_birthdate">Születési idő: </string>
    <string name="profile_city">Lakhely: </string>
    <string name="profile_gender">Nem: </string>
    <string name="profile_phone_number">Telefonszám: </string>

</resources>
