<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/tvEventName"
        android:textSize="18sp"
        android:text="@string/event_name"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvAudience"
        android:textSize="18sp"
        android:text="@string/event_audience"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvDateOfEvent"
        android:textSize="18sp"
        android:text="@string/event_start_date"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvEndOfEvent"
        android:textSize="18sp"
        android:text="@string/event_end_date"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvPrice"
        android:textSize="18sp"
        android:text="@string/event_price"
        android:padding="16dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvLocale"
        android:textSize="18sp"
        android:text="@string/event_locale"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:text="@string/event_description"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="16dp"
        android:minLines="1"
        android:maxLines="10"/>



    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#000000" />



</LinearLayout>
